	PR middle-end/33423 	* builtins.c (expand_builtin_memory_chk): Handle COMPOUND_EXPRs 	returned by build_call_expr.

* gcc.c-torture/compile/20070915-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@128554 138bc75d-0d04-0410-961f-82ee72b054a4